--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^6.2.3",
+    "mongoose": "^6.11.2",
     "morgan": "~1.9.1",
+    "path": "^0.12.7",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.3.3"
   }
 }
