--- a/package.json
+++ b/package.json
@@ -6,21 +6,15 @@
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run start:dev\" \"npm run client\""
+    "dev": "concurrently \"npm run start:dev\" \"npm run client\"",
+    "test" : "mocha './routes/users.route.js'"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^6.11.2",
-    "morgan": "~1.9.1",
-    "path": "^0.12.7",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.3.3"
+    "nodemon": "^2.0.15"
   }
 }
