--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start:dev": "nodemon ./bin/www",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start:dev\" \"npm run client\"",
-    "test" : "mocha './routes/users.route.js'"
+    "test": "mocha './routes/users.route.js'"
   },
   "dependencies": {
     "debug": "~2.6.9",
+    "express": "^4.18.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
