--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "mocha './routes/users.route.js'"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
