--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "sonar-scanner": "node_modules/sonar-scanner/bin/sonar-scanner",
     "sonar": "sonar-scanner"
   },
   "eslintConfig": {
