--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
-    "sonar-scanner": "^3.1.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sonar-scanner": "^3.1.0"
   }
 }
