--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start:dev": "nodemon ./bin/www",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run start:dev\" \"npm run client\"",
-    "test": "mocha './routes/users.route.js'"
+    "test": "mocha './routes/users.route.js'",
+    "sonar-scanner": "node_modules/sonar-scanner/bin/sonar-scanner",
+    "sonar": "sonar-scanner"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -16,11 +18,11 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
+    "sonar-scanner": "^3.1.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.15",
-    "sonar-scanner": "^3.1.0"
+    "nodemon": "^2.0.15"
   }
 }
